Add extra realm unit tests and cleanup